# CosmoGasPeruser

./: .gitignore  PrepLog.md  README.md  buildup.md  data.dvc  denoising_autoencoder.keras  main.py  mlflow_test.py  pyproject.toml  references.md  requirements.txt  todo
.dvc/: config
CNN/: cnn_model.pth  cnn_model_best.pth  main.py  main_mod1.py
CNN/src/: data_loader.py  model.py
LineofSightNet/Signal_to_Noise/: all_SN_values.npy  all_fluxes.npy  flux_SN_correlation.ipynb
PhysicsSpectraClassifier/: SVM.ipynb  data_explorer.py  data_loader.py  pipeline.py
PhysicsSpectraClassifier/.ipynb_checkpoints/: SVM-checkpoint.ipynb
SVM/: consolidated_gs_results.xlsx  data_preprocessing.py  svm_full_training.py  svm_tune_hyperparam.py
Spectrum_Physics_SVM_proto/: README.md
classifier_SVM/: README.md  TODO.txt  main.py  plot_pca.py  requirements.txt
classifier_SVM/config/: config.py
configs/: dct.yaml  example.yaml  pca.yaml
data/: .gitignore  README.md  feature_analysis.dvc  preprocessed.dvc  processed.dvc
data_analysis/: pca.py
data_explorer/: clustering.py  main.py  random_forest_feature_importance.py  visualization.py
data_preprocessing/: pca.py  train_test_split.py
hyperparam_tuning/: main.py
model_analysis/: host_galaxy.py
model_saving/: save_model.py
models/: SVM.py  clustering_main.py  main.py  random_forest.py  rf_main.py  xgboost_main.py
notebooks/: DCT example.ipynb  README.md
output/: prediction.py
random_forest/: README.md  main.py
scripts/: config.py  denoiseNN.py  random_forest_main.py
src/: main.py
tests/: test_core.py
(+178 files in other folders)
