[project]
name = "cosmogasperuser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mlflow>=3.4.0",
    "plotly>=6.4.0",
    "PyYAML>=6.0.1",
    "numpy>=1.26.4",
    "scipy>=1.12.0",
    "matplotlib>=3.8.3",
    "scikit-learn>=1.4.1",
    "torch>=2.2.1",
    "pytest>=9.0.2",
    "dvc>=3.66.1",
    "python-dotenv>=1.1.1",
]
